# call_me_maybe_practice

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  subject.md
data/output/: function_calling_results.json
src/: __main__.py  decoder.py  json_loader.py  models.py  prompt_builder.py
