[project]
name = "call-me-maybe"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "llm-sdk",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.16.0",
]

[tool.mypy]
exclude = "^(llm_sdk|venv|\\.venv|config)/"

[[tool.mypy.overrides]]
module = ["llm_sdk", "llm_sdk.*"]
ignore_missing_imports = true

[tool.uv.sources]
llm-sdk = { path = "./llm_sdk" }
